# sei-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  TODO.md  download_data.sh  env_setup.sh  pyproject.toml  test.vcf  utils.py
.github/workflows/: main.yml  python.yml
embeddings/: extract_last_layer_embeddings.py  extract_last_layer_embeddings_with_register_hooks.py  util.py
embeddings/input_data/Alcantar_2025/: extract_last_layer_embeddings_Alcantar.py
embeddings/input_data/Alcantar_2025/.ipynb_checkpoints/: extract_last_layer_embeddings_Alcantar-checkpoint.py
embeddings/input_data/Angenent-Mari_2020/: extract_sei_embeddings.py
embeddings/input_data/Angenent-Mari_2020/.ipynb_checkpoints/: extract_sei_embeddings-checkpoint.py
embeddings/input_data/Feng_2023/: merged_data_ML_predictions.csv  merged_data_ML_predictions.fasta  merged_data_dSort-Seq_results.csv  merged_data_dSort-Seq_results.fasta
embeddings/input_data/Feng_2023/.ipynb_checkpoints/: merged_data_dSort-Seq_results-checkpoint.csv
embeddings/scripts/: .extract_last_layer_embeddings_Feng_2023.py  convert_to_fasta.py  extract_last_layer_embeddings.py  extract_last_layer_embeddings_Feng_2023.py  extract_last_layer_embeddings_with_register_hooks.py
embeddings/scripts/.ipynb_checkpoints/: extract_last_layer_embeddings_Feng_2023-checkpoint.py
model/: README.md  sei.py
retrieve_test/: retrieve_embeddings.py  test.fasta  util.py
tests/: __init__.py  conftest.py  factories.py  test_embed_sequence.py  test_encode_sequence.py  test_onehot_encode_sequence.py
