[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sei-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "safetensors>=0.6.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "umap>=0.1.1",
]

[tool.hatch.build.targets.wheel]
packages = [
    "embeddings",
    "model",
    "train",
]
artifacts = [
    "utils.py",
]

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["embeddings", "model"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "embeddings/input_data/",
    "train/",
]
